; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/pseries/extr_setup.c_pseries_disable_reloc_on_exc.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/pseries/extr_setup.c_pseries_disable_reloc_on_exc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@H_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [58 x i8] c"Warning: Failed to disable relocation on exceptions: %ld\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pseries_disable_reloc_on_exc() #0 {
  %1 = alloca i64, align 8
  br label %2

2:                                                ; preds = %0, %8
  %3 = call i64 (...) @disable_reloc_on_exceptions()
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = call i32 @H_IS_LONG_BUSY(i64 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %12

8:                                                ; preds = %2
  %9 = load i64, i64* %1, align 8
  %10 = call i32 @get_longbusy_msecs(i64 %9)
  %11 = call i32 @mdelay(i32 %10)
  br label %2

12:                                               ; preds = %7
  %13 = load i64, i64* %1, align 8
  %14 = load i64, i64* @H_SUCCESS, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12
  %17 = load i64, i64* %1, align 8
  %18 = call i32 @pr_warn(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i64 %17)
  br label %19

19:                                               ; preds = %16, %12
  ret void
}

declare dso_local i64 @disable_reloc_on_exceptions(...) #1

declare dso_local i32 @H_IS_LONG_BUSY(i64) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @get_longbusy_msecs(i64) #1

declare dso_local i32 @pr_warn(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
